# every-jobs

./: .flake8  .replit  README.md  pyproject.toml  tox.ini
server/: application.py  database.py  jobs.py  main.py  models.py  scrapping.py
server/static/css/: style.css
server/static/js/: common.js
server/templates/: main.html
