[tool.poetry]
name = "every-jobs"
version = "0.1.0"
description = ""
authors = ["Yeonggwang <immutable000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
aiofiles = "^0.8.0"
Jinja2 = "^3.0.3"
httpx = "^0.21.3"
beautifulsoup4 = "^4.10.0"
diskcache = "^5.4.0"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"
mypy = "^0.931"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88 
include = '\.pyi?$'
# regex
extend-exclude = '''
     migrations
'''

[tool.isort]
line_length = 88 
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
